charts/template.yaml
---
# Source: crypto-exchange/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crypto-exchange
  labels:
    helm.sh/chart: crypto-exchange-0.1.0
    app.kubernetes.io/name: crypto-exchange
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: crypto-exchange
    app.kubernetes.io/instance: release-name
---
# Source: crypto-exchange/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crypto-exchange
  labels:
    helm.sh/chart: crypto-exchange-0.1.0
    app.kubernetes.io/name: crypto-exchange
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: crypto-exchange
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: crypto-exchange
        app.kubernetes.io/instance: release-name
    spec:
      containers:
        - name: crypto-exchange
          image: "shararehsadri/crypto-exchange:0.0.1"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
          command: ["gunicorn"]
          args:
            - "--bind"
            - "0.0.0.0:8000"
            - "--timeout"  # Add this
            - "120"        # Increase timeout to 120 seconds
            - "CryptoCurrencyExchange.wsgi"
---
# Source: crypto-exchange/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crypto-exchange
  labels:
    helm.sh/chart: crypto-exchange-0.1.0
    app.kubernetes.io/name: crypto-exchange
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
spec:
  ingressClassName: nginx
  rules:
    - host: "crypto.minikube"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: crypto-exchange
                port:
                  number: 8000
